# puzzler

./: .gitignore  README  ideas.org  puzwiki.html  puzzler.cabal  todo.org
examples/Glpk/Examples/: GlpkExample.hs
gui/: puzzler.glade
haskell/: puzzler.cabal
haskell/src/c/: stubs.c
haskell/src/hs/: Cli.hs  CreateDict.hs  TestGlpk.hs
haskell/src/hs/Glpk/: Types.hs
haskell/src/hs/Puzzler/: CryptoMatch.hs  Error.hs  StringTrie.hs  SuffixArray.hs
haskell/tests/: TestDriver.hs
python/puzzler/: 25.txt  grid.py  sudoku.py
python/puzzler/sat/: cnf.py
python/sudoku/: Makefile  puzzles.txt
src/: Main.hs
src/Glpk/: Raw.hs
src/c/: stubs.c
src/hs/: CreateDict.hs  CryptoWord.hs  FindAnagrams.hs  Glpk.hs  Main.hs  TestGlpk.hs
src/hs/Glpk/: Raw.hs  Types.hs
src/hs/Puzzler/: Anagram.hs  Binary.hs  Conf.hs  CryptoMatch.hs  Pretty.hs  StringTrie.hs  SuffixArray.hs
sudoku/: .gitignore  Makefile  puzzles.txt  sudoku.c  sudoku.py
sudoku/sat/: cnf.py
tests/: Properties.hs  TestDriver.hs
