Name:                puzzler
Version:             0.1
Cabal-Version:       >= 1.2
Description:

    A compendium of programs for solving different logic puzzles.

Synopsis:            A logic puzzle solver.
Category:            Cheat
Stability:           alpha
License:             LGPL
License-file:        LICENSE
Author:              Denis Bueno
Build-type:          Simple


Executable puzzler
 Main-is:             Main.hs
 Extra-lib-dirs:      /opt/local/lib
 Other-modules:       Glpk
                      Glpk.Raw
                      Glpk.Types
                      Puzzler.StringTrie
                      Puzzler.Anagram

                      Glpk.Examples.GlpkExample
 C-sources:           src/c/stubs.c
 Hs-source-dirs:      src/hs examples
 Ghc-options:         -funbox-strict-fields
                      -fwarn-dodgy-imports -fwarn-incomplete-record-updates
                      -fwarn-unused-binds -fwarn-unused-imports
 Extensions:          OverloadedStrings,
                      FlexibleInstances,
                      ExistentialQuantification
 Build-Depends:       base,
                      QuickCheck,
                      containers,
                      bytestring,
                      array,
                      glade,
                      gtk,
                      regex-compat
 Ghc-prof-options:    -auto-all

Executable puzzler-test
 Main-is:             TestDriver.hs
 Extra-lib-dirs:      /opt/local/lib
 Other-modules:       Glpk
                      Glpk.Raw
                      Glpk.Types
                      Puzzler.StringTrie
                      Puzzler.Anagram

                      Glpk.Examples.GlpkExample
                      Properties
 C-sources:           src/c/stubs.c
 Hs-source-dirs:      src/hs examples tests
 Ghc-options:         -funbox-strict-fields
                      -fwarn-dodgy-imports -fwarn-incomplete-record-updates
                      -fwarn-unused-binds -fwarn-unused-imports
 Extensions:          OverloadedStrings,
                      FlexibleInstances,
                      ExistentialQuantification
 Build-Depends:       base,
                      QuickCheck,
                      containers,
                      bytestring,
                      array,
                      glade,
                      gtk,
                      regex-compat
 Ghc-prof-options:    -auto-all


