Name:                puzzler
Version:             0.2
Cabal-Version:       >= 1.2
Description:

    A compendium of programs for helping solve different logic puzzles.

Synopsis:            A logic puzzle solving helper
Category:            Cheat
Stability:           alpha
License:             LGPL
License-file:        LICENSE
Author:              Denis Bueno
Build-type:          Simple


Executable FindAnagrams
 Main-is:             FindAnagrams.hs
 Other-modules:       
                      Puzzler.Anagram
                      Puzzler.Conf
                      Puzzler.StringTrie

 Hs-source-dirs:      src/hs
 Ghc-options:         -funbox-strict-fields
                      -Wall
                      -fno-warn-name-shadowing
                      -fno-warn-orphans 
 Extensions:          OverloadedStrings,
                      FlexibleInstances,
                      ExistentialQuantification
 Build-Depends:       array,
                      base,
                      bytestring,
                      containers,
                      directory,
                      hslogger < 2,
                      regex-compat
 Ghc-prof-options:    -auto-all

{-
Executable puzzler-test
 Main-is:             TestDriver.hs
 Extra-lib-dirs:      /opt/local/lib
 Other-modules:       Glpk
                      Glpk.Raw
                      Glpk.Types
                      Puzzler.StringTrie
                      Puzzler.Anagram

                      Glpk.Examples.GlpkExample
                      Properties
 C-sources:           src/c/stubs.c
 Hs-source-dirs:      src/hs examples tests
 Ghc-options:         -funbox-strict-fields
                      -fwarn-dodgy-imports -fwarn-incomplete-record-updates
                      -fwarn-unused-binds -fwarn-unused-imports
 Extensions:          OverloadedStrings,
                      FlexibleInstances,
                      ExistentialQuantification
 Build-Depends:       base,
                      QuickCheck,
                      containers,
                      bytestring,
                      array,
                      glade,
                      gtk,
                      regex-compat
 Ghc-prof-options:    -auto-all


-}
