Name:                puzzler
Version:             0.2
Cabal-Version:       >= 1.2
Description:

    A compendium of programs for helping solve different logic puzzles.

Synopsis:            A logic puzzle solving helper
Category:            Cheat
Stability:           alpha
License:             LGPL
License-file:        LICENSE
Author:              Denis Bueno
Build-type:          Simple


Executable FindAnagrams
 Main-is:             FindAnagrams.hs
 Other-modules:       
                      Puzzler.Anagram
                      Puzzler.Binary
                      Puzzler.Error
                      Puzzler.Conf
                      Puzzler.StringTrie

 Hs-source-dirs:      src/hs
 Ghc-options:         -funbox-strict-fields
                      -Wall
                      -fno-warn-name-shadowing
                      -fno-warn-orphans 
 Extensions:          OverloadedStrings,
                      FlexibleInstances,
                      ExistentialQuantification,
                      DeriveDataTypeable
 Build-Depends:       array,
                      base >= 4,
                      bytestring,
                      containers,
                      directory,
                      hslogger < 2,
                      regex-compat
 Ghc-prof-options:    -auto-all


Executable CreateDict
 Main-is:             CreateDict.hs
 Other-modules:       
                      Puzzler.Anagram
                      Puzzler.Binary
                      Puzzler.Error
                      Puzzler.Conf
                      Puzzler.StringTrie

 Hs-source-dirs:      src/hs
 Ghc-options:         -funbox-strict-fields
                      -Wall
                      -fno-warn-name-shadowing
                      -fno-warn-orphans 
 Extensions:          OverloadedStrings,
                      FlexibleInstances,
                      ExistentialQuantification,
                      DeriveDataTypeable
 Build-Depends:       array,
                      base >= 4,
                      binary,
                      bytestring,
                      containers,
                      directory,
                      hslogger < 2,
                      parallel,
                      regex-compat
 Ghc-prof-options:    -auto-all


Executable CryptoWord
 Main-is:             CryptoWord.hs
 Other-modules:       
                      Puzzler.Anagram
                      Puzzler.Binary
                      Puzzler.Error
                      Puzzler.Conf
                      Puzzler.CryptoMatch
                      Puzzler.StringTrie

 Hs-source-dirs:      src/hs
 Ghc-options:         -funbox-strict-fields
                      -Wall
                      -fno-warn-name-shadowing
                      -fno-warn-orphans 
 Extensions:          OverloadedStrings,
                      FlexibleInstances,
                      ExistentialQuantification,
                      DeriveDataTypeable
 Build-Depends:       array,
                      base >= 4,
                      binary,
                      bytestring,
                      containers,
                      directory,
                      hslogger < 2,
                      parallel,
                      regex-compat
 Ghc-prof-options:    -auto-all


-- you can try this if you want
-- Executable TestGlpk
--  Main-is:             TestGlpk.hs
--  Includes:            glpk.h
--  Include-dirs:        /opt/local/include
--  Extra-libraries:     glpk
--  C-sources:           src/c/stubs.c
--  Other-modules:       
--                       Glpk
--                       Glpk.Types
--                       Glpk.Raw
--                       Puzzler.Error
--                       Puzzler.Conf
--                       Puzzler.Pretty

 Hs-source-dirs:      src/hs
 Ghc-options:         -funbox-strict-fields
                      -Wall
                      -fno-warn-name-shadowing
                      -fno-warn-orphans 
 Extensions:          OverloadedStrings,
                      FlexibleInstances,
                      ExistentialQuantification,
                      DeriveDataTypeable
 Build-Depends:       array,
                      base >= 4,
                      bytestring,
                      containers,
                      directory,
                      hslogger < 2,
                      mtl,
                      regex-compat
 Ghc-prof-options:    -auto-all


